--- a/schoolApp/src/main/res/layout/activity_login.xml
+++ b/schoolApp/src/main/res/layout/activity_login.xml
@@ -1,166 +1,144 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/layout_parent"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/gray_child_choosing"
     android:gravity="center"
-    android:orientation="vertical"
-    android:id="@+id/layout_parent" >
+    android:orientation="vertical">
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
         android:adjustViewBounds="true"
-        android:src="@drawable/logo_top_panel" />
-    
+        android:background="@drawable/classtune_selectuser_top">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:src="@drawable/classtune_logo_top" />
+    </RelativeLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/white"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:padding="10dip" >
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Not registered yet?"
-            android:textColor="@color/gray_1"
-            android:textSize="18sp" />
-		<LinearLayout android:layout_width="wrap_content"
-		    android:layout_height="wrap_content"
-		    android:orientation="horizontal"
-		    android:gravity="center_horizontal"
-		    android:layout_marginTop="5dip">
-        <TextView
-           	android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:clickable="true"
-            android:text="Sign Up Now!"
-            android:textColor="@color/black"
-            android:textSize="20sp" />
-        
-        <TextView
-            android:id="@+id/tv_signup"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:clickable="true"
-            android:text="FREE"
-            android:textColor="@color/red"
-            android:textSize="20sp"
-            android:layout_marginLeft="5dip" />
-        </LinearLayout>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="0dip"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:paddingLeft="10dip"
-        android:paddingRight="10dip" >
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="5dip"
-            android:text="LOGIN"
-            android:textSize="15sp" />
+        android:layout_height="match_parent"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:gravity="center_horizontal"
+        android:orientation="vertical">
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal" >
+            android:layout_marginTop="40dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:orientation="horizontal">
 
-            <ImageView
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="5dip"
+                android:layout_weight="1"
+                android:text="LOGIN"
+                android:textSize="15sp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:text="Forgot Password?"
+                android:textSize="15sp" />
+
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:padding="10dp"
+            android:background="@drawable/login_text_bg"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:layout_width="20dp"
+                android:layout_height="20dp"
                 android:layout_gravity="center"
-                android:layout_marginRight="5dip"
+                android:layout_marginLeft="15dp"
                 android:adjustViewBounds="true"
                 android:src="@drawable/username_icon" />
 
             <EditText
                 android:id="@+id/et_username"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="2dip"
-                android:background="@drawable/username_field"
-                android:hint="@string/hint_username"
-                android:includeFontPadding="true"
-                android:paddingLeft="5dip"
-                android:textColorHint="@color/hint_color"
-                android:singleLine="true"
+                android:background="@null"
+                android:hint="username"
                 android:imeOptions="actionNext"
-                android:textSize="15sp" >
+                android:includeFontPadding="true"
+                android:padding="5dp"
+                android:singleLine="true"
+                android:textColorHint="@color/hint_color"
+                android:textSize="15sp">
 
                 <requestFocus />
             </EditText>
         </LinearLayout>
-
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal" >
+            android:layout_marginTop="15dp"
+            android:padding="10dp"
+            android:background="@drawable/login_text_bg"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
 
             <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="25dp"
+                android:layout_height="22dp"
                 android:layout_gravity="center"
-                android:layout_marginRight="5dip"
+                android:layout_marginLeft="10dp"
                 android:adjustViewBounds="true"
                 android:src="@drawable/pasword_icon" />
 
             <EditText
                 android:id="@+id/et_password"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/pass_field"
+                android:background="@null"
                 android:hint="@string/hint_password"
                 android:imeOptions="actionDone"
                 android:includeFontPadding="true"
                 android:inputType="textPassword"
-                android:paddingLeft="5dip"
-                android:textColorHint="@color/hint_color"
+                android:padding="5dip"
                 android:singleLine="true"
+                android:textColorHint="@color/hint_color"
                 android:textSize="15sp" />
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dip"
-            android:orientation="horizontal" >
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginRight="5dip"
-                android:adjustViewBounds="true"
-                android:src="@drawable/trans_login" />
-
             <Button
+                android:layout_marginTop="15dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
                 android:id="@+id/btn_login"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/btn_login" />
-        </LinearLayout>
+                android:background="@color/classtune_green_color"
+                android:padding="8dp"
+                android:text="LOG IN"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dip"
-            android:text="OR"
-            android:textSize="15sp" />
+
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dip"
             android:gravity="center"
-            android:orientation="horizontal" >
+            android:orientation="horizontal">
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -170,22 +148,8 @@
                 android:adjustViewBounds="true"
                 android:src="@drawable/trans_login" />
 
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:adjustViewBounds="true"
-                android:background="@drawable/btn_fb_login" 
-                android:id="@+id/fb_login_btn"/>
-
-            <Button
-                android:id="@+id/google_login_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:adjustViewBounds="true"
-                android:background="@drawable/btn_gplus_login" />
         </LinearLayout>
     </LinearLayout>
 
-    
 
 </LinearLayout>
