--- a/schoolApp/src/main/res/layout/fragment_paidverision_summery.xml
+++ b/schoolApp/src/main/res/layout/fragment_paidverision_summery.xml
@@ -8,43 +8,28 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="150dp"
+        android:background="@drawable/classtune_selectuser_top">
 
-        <com.champs21.schoolapp.viewhelpers.ResizableImageView
+        <!--<com.champs21.schoolapp.viewhelpers.ResizableImageView
             android:id="@+id/sum_iv_banner"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="150dp"
             android:adjustViewBounds="true"
             android:scaleType="fitXY"
-            android:src="@drawable/summery_banner" />
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:orientation="vertical" >
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="#99000000"
-                android:padding="5dp"
-                android:text="Welcome to "
-                android:textColor="@color/white"
-                android:textSize="18sp"
-                android:textStyle="bold" />
+            android:src="@drawable/summery_banner" />-->
 
             <TextView
                 android:id="@+id/sum_tv_school_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="#99000000"
                 android:padding="5dp"
                 android:text="Mohammadpur Ideal School "
                 android:textColor="@color/white"
                 android:textSize="22sp"
+                android:layout_centerInParent="true"
                 android:textStyle="bold" />
-        </LinearLayout>
+
     </RelativeLayout>
 
     <LinearLayout
